styles.css
  * {
        margin: 0;
        padding: 0;
    }

    .roboto-regular {
        font-family: "Roboto", system-ui;
        font-weight: 400;
        font-style: normal;
    }
      
    body {
        height: 100%;
    }
    .container {
        text-align: center;
        display: grid;
        grid-template-columns: 250px 1fr;
        grid-template-rows: 200px 1fr;
        height: 100vh;
        /* height: calc(100vh - 1rem - 20px); */
        /* gap: 4px; */
    }

    .container div {
        padding: 10px;
        font-size: 24px;
        font-family: "Roboto", Helvetica, sans-serif;
        font-weight: bold;
        color: black;

    }

    .menu-icons {
        width: 2rem;
        height: 2rem;
        fill: white;
    }

    .card-icons {
        width: 1.5rem;
        height: 1.5rem;
    }

    .dashboard-logo{
        width: 3rem;
        height: 3rem;
        fill: white;
    }

    .sidebar {
        background-color: #0ea5e9;
        grid-row: 1 / 3;
        grid-column: 1 / 2;
        display: flex;
        flex-direction: column;
        text-align: left;
        gap: 1rem;
       
    }


    .logo, .menu > ul > li  {
        display: flex;
        justify-content: left;
        align-items: center;
        gap: 1rem;
       
    }

    #dashboard-text {
        color: white;
    }

    .menu-wrapper {
        display: flex;
        flex-direction: column;
        align-items: left;
        justify-content: flex-start;
        flex: 1;
        gap: 3rem;
  
    }

    .sidebar ul {
        display: grid;
        grid-template-rows: 1fr;
        list-style: none;
        gap: 1rem;
        color: white;
    }

    .header {
        display: grid;
        grid-template-columns: minmax(450px, 3fr) minmax(350px, 2fr);
        grid-template-rows: 2fr 5fr;
        align-items: center;
        padding: 20px 40px !important;
        background-color: #f0f0f0;        
    }

    .searchbar {
        display: flex;
        align-items: center;
    }

    .searchbar-input {
        border-radius: 1rem;
        height: 2rem;
        width: clamp(300px, 100%, 600px);
        background-color: #bccbde;
        border: none;
        font-size: 1rem;
        padding-left: 10px;

    }

    .navigation {
        display: flex;
        justify-content: flex-end;
        align-items: center;
        gap: 30px;
    }

    .current-user-pic {
        width: 48px;
        height: 48px;
        border-radius: 50%;
    }

    .user {
        display: flex;
        align-items: center;
    }

    .current-user-main-pic {
        width: 72px;
        height: 72px;
        border-radius: 50%;
    }

    .current-user p {
        font-weight: bold;
        text-align: left;
        font-size: 14px;
        margin: 5px 10px;
    }

    .current-user .current-user-title {
        font-size: 20px;
        text-align: left;
        font-weight: bold;
    }


    .actions {
        display: flex;
        align-items: center;
        justify-content: flex-end;
        gap: 30px;
    }

    button {
        color: #f0f0f0;
        padding: 10px 30px;
        background-color: #0ea5e9;
        border-radius: calc(20px + 20px);
        font-size: 14px;
        font-weight: bold;
        border: none;
    }


    .mainframe {
        display: grid;
        grid-template-columns: 3fr minmax(322px, 1fr);
        grid-template-rows: min(500px);
        border-top: 5px solid lightgray !important;
        background-color: #bccbde;
        
        
    }

    .right-frame {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        padding: 0px 10px !important;
    }

    .projects {
        grid-row: 1 / 3;
        text-align: left;
    }

    .blocks {
        text-align: left;
    }

    .announcements, .trending {
        padding: 10px 0px !important;
    }


    .article {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
        gap: 20px;
        padding: 10px 0px !important;
    }   
    
    .article p {
        font-size: 12px;
        font-family: sans-serif;
        text-align: left;
    }
    
    .card {
        position: relative;
        background-color: #FFFFFF;
        color: black;
        text-align: center;
        height: 200px;
        border-radius: 12px;
        box-shadow: 0px 4px 8px rgb(0,0,0,0.1);
        overflow: hidden;
        display: grid;
        grid-template-rows: 3fr 1fr
    }

    .announce-card {
        position: relative;
        background-color: #FFFFFF;
        color: black;
        text-align: left;
        border-radius: 12px;
        box-shadow: 0px 4px 8px rgb(0,0,0,0.1);
        overflow: hidden;
        display: grid;
        grid-template-rows: repeat(3, 1fr);
        min-width: 200px;
        padding: 20px 10px !important;
    }

    .card::before {
        content: '';
        position: absolute;
        top: 0;
        left: 0;
        height: 100%;
        border: 4px solid rgb(255, 196, 0);
        box-sizing: border-box;
    }

    /*
    .photo, .side-content {
        display: grid;
        align-items: center;
    }
    */
    .text p {
        color: rgb(129, 129, 129);
        font-weight: normal;
        font-size: 14px;
        padding-left: 5px;
        padding-right: 10px;

    }

    .announce-card .text p {
        color: rgb(129, 129, 129);
        font-weight: normal;
        font-size: 11px;
        padding: 0 15px;
    }

    .text .title {
        font-size: 18px;
        text-align: left;
        color: black;
        font-weight: bold;
        padding-top: 5px;
        padding-left: 5px;
        padding-right: 10px;
    }

    .announce-card .text .title {
        font-size: 14px;
        text-align: left;
        color: black;
        font-weight: bold;
        padding: 0 15px;
    }

    .announce-card .text {
        padding: 15px 10px;
    }

    .card .links {
        justify-self: right;
    }

    .card-icons {
        padding: 0 10px;
    }

    .trending-card {
        position: relative;
        background-color: #FFFFFF;
        color: black;
        text-align: left;
        border-radius: 12px;
        box-shadow: 0px 4px 8px rgb(0,0,0,0.1);
        overflow: hidden;
        display: grid;
        grid-template-rows: repeat(4, 1fr);
        min-width: 200px;
        padding: 10px 10px 10px 10px !important;

    }

    .trending-block {
        display: flex;
        flex-basis: 265px;
    }

    .trending-block img {
        border-radius: 50%;
        width: 48px;
        height: 48px;
        align-self: flex-start;
    }

    .trending-user {
        padding: 0 !important;
        margin: auto;
        margin-left: 15px;
    }

    .trending-user p {
        color: rgb(129, 129, 129);
        font-weight: normal;
        font-size: 12px;
    }

    .trending-user .trending-user-title {
        font-size: 12px;
        text-align: left;
        color: black;
        font-weight: bold;
    }


    /* .footer {
        padding: 10px;
        font-family: Helvetica;
        font-weight: bold;
        background-color: rgb(8, 0, 49);
        text-align: center;
        height: 1rem;
    }

    .footer p {
        font-size: 1rem;
        font-weight: normal;
        color: white;
    } */

